--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -9,6 +9,7 @@
 
 html{
   font-size: 62.5%;
+  background: #919ea7;
 }
 
 body {
@@ -18,4 +19,9 @@ body {
 a{
   text-decoration: none;
   transition: .3s;
+}
+
+canvas{
+  width: 100%;
+  height: 100vh;
 }
